[package]
name = "rtt2pty"
version = "0.1.0"
edition = "2024"

[dependencies]
probe-rs = { version = "0.29" }
ptyprocess = { version = "0.4" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ctrlc = "3.4"
nix = "0.30.1"

[patch.crates-io]
# ptyprocess = { path = "../ptyprocess/" }
ptyprocess = { git = "https://github.com/indianboy42/ptyprocess" }
